refactor: implement self-hosted analytics proxy
Adds YARP reverse proxy to serve analytics scripts through the application's
own domain for improved privacy and reliability.

refactor: reorganize documentation files
  Moved README.md to repository root for better visibility.
  Removed outdated PROJECT_STATUS.md.

style: enhance new version notice visibility
  Added shadow to improve visual prominence of the notice.

docs: simplify development workflow instructions
  Streamlined check command documentation in CLAUDE.md.

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-title" content="TrendWeight" />
     <meta name="theme-color" content="#3468b1" />
     
-    <script defer data-domain="trendweight.dev" src="https://plausible.io/js/script.outbound-links.js"></script>
+    <script defer data-domain="trendweight.dev" src="/js/script.js" data-api="/api/event"></script>
     <title>TrendWeight</title>
   </head>
   <body>
