deps: update domain in script tag for production environment

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -36,13 +36,10 @@
       }
     </style>
     
-    <script defer data-domain="trendweight.dev" src="/js/script.js" data-api="/api/event"></script>
+    <script defer data-domain="trendweight.com" src="/js/script.js" data-api="/api/event"></script>
     <title>TrendWeight</title>
   </head>
   <body>
-    <script>
-      if (/MSIE|Trident/.test(window.navigator.userAgent)) window.location.href = '/unsupported.html';
-    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
