refactor(auth): simplify auth guard and remove window.Clerk dependencies
- Replace complex TanStack Router requireAuth with simple parameter-based function
- Remove all window.Clerk references in favor of injected auth context
- Update API client to accept optional token parameter
- Update all queries and mutations to use useAuth hook for token injection
- Re-export Clerk's GetToken type to avoid direct imports
- Update route loaders to pass context.auth.getToken
- Fix all tests to work with new auth injection pattern
- Change isInitializing to isLoaded for clearer semantics

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,7 +9,8 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     
-    <!-- Apple specific meta tags for PWA -->
+    <!-- PWA meta tags -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="TrendWeight" />
